style: imports, license headers, and use Java 21+ List APIs